--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -7,7 +7,12 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../index.css">
 	</head>
+<!--[if mso]>
+	<body align="center" class="mso">
+<![endif]-->
+<!--[if !mso]><!-->
 	<body align="center">
+<!--<![endif]-->
 		<table style align="center" border="0" cellpadding="0" cellspacing="0" width="100%" role="presentation" class="wrapper">
 			<!-- Logo Banner -->
 			<tr>
@@ -87,7 +92,7 @@
 										style="height:32px;v-text-anchor:middle;color:#ffffff;width:227px;" 
 										fillcolor="#00539A">
 										<w:anchorlock/>
-										<center>
+										<center >
 								<![endif]-->
 								<a target="_blank" href="https://lazard.com/" style="width: 227px" class="btn pill">Read Emerging Markets Monitor</a>
 								<!--[if mso]>
