--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -56,9 +56,11 @@
 													style="height:32px;v-text-anchor:middle;color:#00539A;width:98px;" 
 													fillcolor="#ffffff">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">Download</a>
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
+												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
@@ -163,9 +165,11 @@
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">Download</a>
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
+												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
@@ -240,9 +244,11 @@
 													style="height:32px;v-text-anchor:middle;color:#00539A;width:98px;" 
 													fillcolor="#ffffff">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">Download</a>
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
+												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
