--- a/src/components/buttons/pills/templates/template.msoDark.primary.onyx.html
+++ b/src/components/buttons/pills/templates/template.msoDark.primary.onyx.html
@@ -7,9 +7,11 @@
 		style="height:32px;v-text-anchor:middle;color:#171A1C;width:@@width;" 
 		fillcolor="#ffffff">
 		<w:anchorlock/>
-		<center>
+		<center class="mso">
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx">@@label</a>
+<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx">
+	<!--[if !mso]><!--><span><!--<![endif]-->@@label<!--[if !mso]><!--></span><!--<![endif]-->
+</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
