--- a/src/components/buttons/pills/templates/template.msoDark.secondary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.msoDark.secondary.sapphire.html
@@ -7,9 +7,11 @@
 		style="height:32px;v-text-anchor:middle;color:#ffffff;width:@@width;"
 		strokecolor="#ffffff">
 		<w:anchorlock/>
-		<center>
+		<center class="mso">
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: @@width" class="btn pill secondary">@@label</a>
+<a target="_blank" href="https://lazard.com/" style="width: @@width" class="btn pill secondary">
+	<!--[if !mso]><!--><span><!--<![endif]-->@@label<!--[if !mso]><!--></span><!--<![endif]-->
+</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
