--- a/src/components/buttons/pills/templates/template.secondary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.secondary.sapphire.html
@@ -9,7 +9,9 @@
 		<w:anchorlock/>
 		<center>
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: @@width" class="btn pill secondary">@@label</a>
+<a target="_blank" href="https://lazard.com/" style="width: @@width" class="btn pill secondary">
+	<!--[if !mso]><!--><span><!--<![endif]-->@@label<!--[if !mso]><!--></span><!--<![endif]-->
+</a>
 <!--[if mso]>
 		</center>
 	</v:roundrect>
