--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -72,12 +72,20 @@
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:@@width;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill">Visit</a>
+											<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn">
+												<!--[if !mso]><!-->
+												<span class="pill">
+												<!--<![endif]-->
+												@@label
+												<!--[if !mso]><!-->
+												</span>
+												<!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
