--- a/src/components/buttons/pills/templates/template.msoDark.secondary.onyx.html
+++ b/src/components/buttons/pills/templates/template.msoDark.secondary.onyx.html
@@ -9,7 +9,7 @@
 		<w:anchorlock/>
 		<center class="mso">
 <![endif]-->
-<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx secondary">
+<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn pill onyx secondary @@variant">
 	<!--[if !mso]><!--><span><!--<![endif]-->@@label<!--[if !mso]><!--></span><!--<![endif]-->
 </a>
 <!--[if mso]>
