--- a/src/modules/three-column-contents/content/templates/template.html
+++ b/src/modules/three-column-contents/content/templates/template.html
@@ -28,7 +28,8 @@
 						<br>
 						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px"
+							width: "65px",
+							variant: "small"
 						})
 					</td>
 					<td class="column">
@@ -46,7 +47,8 @@
 						<br>
 						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px"
+							width: "65px",
+							variant: "small"
 						})
 					</td>
 				</tr>
