--- a/src/modules/thumbnail-grid/templates/template.dark.html
+++ b/src/modules/thumbnail-grid/templates/template.dark.html
@@ -21,7 +21,8 @@
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px"
+							width: "65px",
+							variant: "small"
 						})
 						<p></p>
 						<br>
@@ -37,7 +38,8 @@
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px"
+							width: "65px",
+							variant: "small"
 						})
 					</td>
 				</tr>
@@ -53,7 +55,8 @@
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px"
+							width: "65px",
+							variant: "small"
 						})
 					</td>
 					<td class="column">
@@ -67,7 +70,8 @@
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px"
+							width: "65px",
+							variant: "small"
 						})
 					</td>
 				</tr>
