--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -78,11 +78,7 @@
 								<br>
 								<p class="paragraph-2">As the United States and European Union increase tariffs on Chinese exports and China becomes more difficult for investors to navigate, companies may be looking to move production away from China to more attractive alternatives. While countries like Mexico, Poland, Vietnam, and Thailand vie for the top spot, India, with its young population and growing economy, might be leading the pack.</p>
 								<br>
-			
-								<!--
-									Component: Button
-									Variant: Pill, Primary, Large
-								-->
+								
 								<!--
 									Component: Pill Button
 									Variant: Primary, Sapphire
@@ -92,9 +88,11 @@
 										style="height:32px;v-text-anchor:middle;color:#ffffff;width:227px;" 
 										fillcolor="#00539A">
 										<w:anchorlock/>
-										<center >
+										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 227px" class="btn pill">Read Emerging Markets Monitor</a>
+								<a target="_blank" href="https://lazard.com/" style="width: 227px" class="btn pill @@variant">
+									<!--[if !mso]><!--><span><!--<![endif]-->Read Emerging Markets Monitor<!--[if !mso]><!--></span><!--<![endif]-->
+								</a>
 								<!--[if mso]>
 										</center>
 									</v:roundrect>
@@ -130,13 +128,15 @@
 										style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 										fillcolor="#00539A">
 										<w:anchorlock/>
-										<center>
+										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">Download</a>
+								<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill @@variant">
+									<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+								</a>
 								<!--[if mso]>
 										</center>
 									</v:roundrect>
-								<![endif]-->		
+								<![endif]-->	
 							</td>
 							<td class="frame"></td>
 						</tr>
