--- a/src/templates/fixed-income-viewpoint.html
+++ b/src/templates/fixed-income-viewpoint.html
@@ -73,9 +73,11 @@
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill">Visit</a>
+											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill @@variant">
+												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
@@ -145,9 +147,11 @@
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#171A1C">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill onyx">Download</a>
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill onyx @@variant">
+												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
