--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -72,19 +72,13 @@
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:@@width;" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: @@width"  class="btn">
-												<!--[if !mso]><!-->
-												<span class="pill">
-												<!--<![endif]-->
-												@@label
-												<!--[if !mso]><!-->
-												</span>
-												<!--<![endif]-->
+											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill @@variant">
+												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
 													</center>
@@ -242,23 +236,6 @@
 													</td>
 												</tr>
 											</table>
-											<br>
-											<!--
-												Component: Pill Button
-												Variant: Primary, Sapphire
-											-->
-											<!--[if mso]>
-												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
-													fillcolor="#00539A">
-													<w:anchorlock/>
-													<center>
-											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill">Visit</a>
-											<!--[if mso]>
-													</center>
-												</v:roundrect>
-											<![endif]-->
 										</td>
 										<td class="column">
 											<h4>In praise of small language models</h4>
@@ -787,9 +764,11 @@
 													style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 													fillcolor="#171A1C">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill onyx">Download</a>
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill onyx @@variant">
+												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
@@ -879,9 +858,11 @@
 													style="height:32px;v-text-anchor:middle;color:#00539A;width:98px;" 
 													fillcolor="#ffffff">
 													<w:anchorlock/>
-													<center>
+													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">Download</a>
+											<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill @@variant">
+												<!--[if !mso]><!--><span><!--<![endif]-->Download<!--[if !mso]><!--></span><!--<![endif]-->
+											</a>
 											<!--[if mso]>
 													</center>
 												</v:roundrect>
