Some module fixes for OL and others

--- a/src/modules/email-banner/one-column/templates/template.html
+++ b/src/modules/email-banner/one-column/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content v-flush">
-			<img src="@@imgBase/@@imgSrc" alt="Banner Image" width="100%" height="auto" />
+			<img style="width: 100%; height: auto;" src="@@imgBase/@@imgSrc" alt="Banner Image" />
 		</td>
 		<td class="frame"></td>
 	</tr>
