--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -8,11 +8,11 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="8px">
 				<tr class="layout_four-column">
-					<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
+					<td style="font-size:1px; line-height:21px; width:124px;" class="column">&nbsp;</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="124" alt="Bio Image">
+						<img style="width:124px;" src="@@imgBase/@@imgSrc"  alt="Bio Image">
 					</td>
-					<td colspan="2" width="248">
+					<td style="width: 248px;" colspan="2">
 						<h3>@@name</h3>
 						<br>
 						<h3 class="subheadline">Director, Head of US Offshore and Latin America Distribution</h3>
