--- a/src/modules/two-column-contents/full-content/templates/template.html
+++ b/src/modules/two-column-contents/full-content/templates/template.html
@@ -6,10 +6,10 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="" cellpadding="8px" class="w-100">
 				<tr class="layout_two-column">
 					<td class="column">
-						<img src="@@imgBase/LAM_ContentImage_Field.png" width="100%" alt="First Column Feature image">
+						<img style="" src="@@imgBase/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block">
 						<p></p>
 						<br>
 						<!--
@@ -72,7 +72,7 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/LAM_ContentImage_Station.png" width="100%" alt="Second Column Feature image">
+						<img style="" src="@@imgBase/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block">
 						<p></p>
 						<br>
 						<!--
