--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -6,15 +6,15 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px">
-				<tr class="layout_mobile-one-column">
+			<table style="" cellpadding="8px" class="w-100">
+				<tr class="layout_two-column layout_mobile-one-column">
 					<!--[if mso]>
 					<td style align="right" class="column">
 					<![endif]-->
 					<!--[if !mso]><!-->
 					<td style class="column align-right-md">
 					<!--<![endif]-->
-						<img style src="@@imgBase/@@imgSrc" alt="Strategy thumbnail">
+						<img style src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" class="d-block">
 					</td>
 					<td style="vertical-align: middle;" class="column">
 						<p style="width: 195px;" class="paragraph-3">
