--- a/src/modules/email-headings/templates/template.dark.html
+++ b/src/modules/email-headings/templates/template.dark.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="" border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
+			<table style="" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid w-100">
 				<tr>
 					<td class="column">
 						@@heading
