--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -5,21 +5,25 @@
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
 		<td class="frame"></td>
-		<td class="content h-flush">
-			<table style="" cellpadding="8px" class="w-100">
-				<tr class="layout_two-column layout_mobile-one-column">
+		<td class="content">
+			<table style="" cellpadding="8px" class="w-100" align="">
+				<tr class="layout_two-column layout_mobile-one-column" align="center">
 					<!--[if mso]>
-					<td style align="right" class="column">
+					<td style="width: 194px; margin-right:16px;" align="right" class="column">
 					<![endif]-->
 					<!--[if !mso]><!-->
-					<td style class="column align-right-md">
+					<td class="column align-right-md">
 					<!--<![endif]-->
-						<img style src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" class="d-block">
+						<img src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" width="194" class="d-block">
 					</td>
-					<td style="vertical-align: middle;" class="column">
-						<p style="width: 195px;" class="paragraph-3">
+					<td style="vertical-align: middle; width: 194px;" class="column" align="left">
+						<p class="paragraph-3">
 							Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'. <br>
-							Explore the Lazard Global Listed <br>
+						</p>
+						<p>
+							Explore the Lazard Global Listed
+						</p>
+						<p>
 							Infrastructure Active ETF page today
 						</p>
 						<br>
