Added some components to the master template, added a quick nav - can remove later if requested

--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -12,7 +12,7 @@
 					<td style="width: 194px; margin-right:16px;" align="right" class="column">
 					<![endif]-->
 					<!--[if !mso]><!-->
-					<td class="column align-right-md">
+					<td style="width: 194px;" class="column align-right-md">
 					<!--<![endif]-->
 						<img src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" width="194" class="d-block">
 					</td>
