--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -8,8 +8,12 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="8px">
 				<tr class="layout_four-column">
-					<td style="font-size:1px; line-height:21px; width:124px;" class="column">&nbsp;</td>
-					<td class="column">
+					<td style="font-size:1px; line-height:21px; width:124px;" class="column d-none-sm">&nbsp;</td>
+					<!--[if mso]>
+					<td style="width:124px; margin-right:16px;" align="right" class="column">
+					<![endif]-->
+					<!--[if !mso]><!-->
+					<td class="column align-right-md">
 						<img style="width:124px;" src="@@imgBase/@@imgSrc"  alt="Bio Image">
 					</td>
 					<td style="width: 248px;" colspan="2">
